Refactor: - Change without variation product info    . price: List<Int> -> Map<Str, List<Int>, Str: null (no var), List<Int> list variation price (no var => price = list.get(0))    . stock: List<Int> -> Map<Str, List<Int>>, Str: null (no var), List<Int> list variation stock (no var => stock = list.get(0))    . rename variable for flash sale/wholesale product/ discount campaign    . init flash sale/discount campaign/wholesale product/ selling price value
Now, we can check all product information on the product detail page with 2 functions:
1. checkWithoutVariationProductInformation()
2. checkVariationProductInformation()